--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,6 @@
   --shape-size: 80%;
   --player-icon-size: 30%;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
