--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -86,11 +86,11 @@
     <div class="info_box">
       <div class="player_div">
         <div class="player_icon player_1">1</div>
-        <div class="player_text">Score: {{ playerOnePoints }}</div>
+        <div class="player_text pokemon_font">Score: {{ playerOnePoints }}</div>
       </div>
       <div class="player_div">
         <div class="player_icon player_2">2</div>
-        <div class="player_text">Score: {{ playerTwoPoints }}</div>
+        <div class="player_text pokemon_font">Score: {{ playerTwoPoints }}</div>
       </div>
     </div>
   </div>
