--- a/src/app/components/home/info/info.component.html
+++ b/src/app/components/home/info/info.component.html
@@ -1,16 +1,17 @@
 <div class="p-3">
-  <h1>Welcome to new Tic Tac Toe game!</h1>
+  <h1 class="pokemon_font">Welcome to new Tic Tac Toe game!</h1>
+  <hr />
   <br />
 
-  <p class="font-mono">
+  <p class="pokemon_font">
     This is a simple Tic Tac Toe game. You can <b>ONLY</b> play with your friend
     with current version.
   </p>
-  <p class="font-mono">
+  <p class="pokemon_font">
     This Tic Tac Toe is same as the classic Tic Tac Toe. The winning condition
     is to get 3 same shapes in a row, column or diagonal.
   </p>
-  <p class="font-mono">
+  <p class="pokemon_font">
     But the interesting part is each player can only place up to 3 shapes in the
     game board. After you placed the <u><b>THIRD</b></u
     >, the <u><b>FIRST</b></u> shape will be faded to indicate that the shape
@@ -18,5 +19,5 @@
     board will always have 3 shapes from each player.
   </p>
 
-  <p class="font-mono">Enjoy!</p>
+  <p class="pokemon_font">Enjoy!</p>
 </div>
